web/base.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");

:root {
  /* All root variables */
  font-family: "Roboto", sans-serif;

  --colour-text: #dde;
  --colour-block: #080808;
  --colour-accent: #ffb53c;
  --colour-accent-trans: #f8d9a82a;
  --colour-highlight: #1d1d1d;

  --colour-mid-grey: #a6acbe;

  --colour-red: #e32020bf;
  --colour-amber: #ff9d30db;
  --colour-green: #43d34a91;

  /* Colour used for profile page*/
  --colour-darker-grey: #808080;

  /* Colours initially used in the login page*/
  --colour-box-background: #ffffff;
  --colour-box-shadow: rgba(0, 0, 0, 0.25);

  --card-shadow: 0 4px 4px rgb(0, 0, 0, 0.25);
  --card-radius: 40px;
  --card-small-radius: 14px;
}

@media print, (prefers-color-scheme: light) {
  :root {
    /* Light Mode Overrides*/
    --colour-text: #000;
    --colour-block: #eee;
    /* --colour-accent: #2f7cee; */
    --colour-accent-trans: #fff9bf62;
    --colour-highlight: #fff;

    --colour-mid-grey: #a6acbe;
  }
}

body {
  color: var(--colour-text);
  background-color: var(--colour-block);
  margin: 0;
}

header.header {
  background-color: var(--colour-highlight);
  display: flex;
  justify-content: space-between;
}

.header h1 {
  margin: 0.5rem;
}

/* DESKTOP NAV */

/* Header bar */
.header {
  padding-block: 0.5rem;
}

.account-info {
  display: none;
}

@media (min-width: 768px) {
  .account-info {
    display: flex;
    gap: 1rem;
    margin-inline: 4rem;
  }
  .account-info h6 {
    font-size: 1.2em;
  }
  .account-info * {
    margin: 0;
  }
  .account-info .flex-col {
    align-items: flex-end;
  }

  .account-info img {
    aspect-ratio: 1;
    border-radius: 100vh;
  }
}

/* SIDE MENU */
main {
  margin: 0;
}

.side-menu {
  display: none;
}

@media (min-width: 768px) {
  :root {
    --side-menu-width: 3rem;
  }

  .side-menu {
    display: block;
    position: fixed;
    height: 100%;
    width: var(--side-menu-width);
    background-color: var(--colour-accent);
  }

  .side-menu ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  .side-menu li {
    width: 2.5rem;
    aspect-ratio: 1;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .side-menu li a {
    color: var(--colour-text);
    text-decoration: none;
  }

  .side-menu li[data-active] {
    background-color: var(--colour-highlight);
    border-radius: 0.4rem;
  }

  .side-menu li[data-active] a {
    color: var(--colour-accent);
  }
  header {
    margin-left: var(--side-menu-width);
  }
  main {
    margin-left: var(--side-menu-width);
    padding: 0.5rem 4rem;
  }
}

/* MOBILE NAV */

.mobile-nav-toggle {
  display: inline-block;
  background-color: transparent;
  color: var(--colour-accent);
  border: none;
  font-size: 2rem;
}

@media (min-width: 768px) {
  .mobile-nav-toggle {
    display: none;
  }
}

.nav-mobile {
  background: var(--colour-accent);
  border: none;
  margin-top: 0;
  width: 100%;

  font-size: 1.5em;
  --rad: 0.7rem;
  border-radius: 0 0 var(--rad) var(--rad);
}

.nav-mobile::backdrop {
  background-color: hsl(0, 0%, 0%, 0.5);
}

.nav-mobile ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  text-align: center;
}

.nav-mobile hr {
  border: 1px solid var(--colour-text);
  width: 100%;
}

.nav-mobile a {
  margin-inline: 2rem;
  color: var(--colour-text);
  text-decoration: none;
  font-weight: 600;
}

.nav-mobile a[data-active] {
  color: var(--colour-block);
  opacity: 0.8;
}

/* CARDS */

.title-card {
  font-size: 24px;
  margin: 1rem;
}

/* utility classes that (should) be able to be re used in a lot of pages) */
.card {
  background-color: var(--colour-highlight);
  color: var(--colour-text);
  box-shadow: var(--card-shadow);
  border-radius: var(--card-radius);
  padding: 1.2rem;
  margin: 1.5rem 0;
}

.card a {
  color: var(--colour-text);
  font-weight: 600;
}

.card-title-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.card-description {
  font-size: 1.1em;
  line-height: 1.25em;
}

.small-cards-wrapper {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  justify-content: start;
}

/* smaller 'sub-cards' */
.card-small {
  width: 100%;
  max-width: 30ch;
  margin: 0.5rem;
  background-color: var(--colour-highlight);
  padding: 1rem;
  border-radius: var(--card-small-radius);
  box-shadow: var(--card-shadow);
}

.accent-outline {
  border: 0.3rem solid var(--colour-accent);
}

.title-card-small {
  margin: 0;
}

/* KANBAN */
@media (min-width: 950px) {
  .kanban-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
  }

  .kanban-mobile-options {
    display: none;
  }
}

.kanban-section {
  flex-grow: 100;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.kanban-section .card-small {
  width: 80%;
  max-width: unset;
}

.kanban-section .card-small:hover {
  cursor: pointer;
}

/* kanban card top border colour (if not overwritten, defaults to colour-accent) */
.kanban-section .card-small {
  border-top: 0.25rem solid var(--colour-card-highlight, var(--colour-accent));
}

/* RAG colours */
.kanban-section:nth-of-type(1) .card-small {
  --colour-card-highlight: var(--colour-red);
}

.kanban-section:nth-of-type(2) .card-small {
  --colour-card-highlight: var(--colour-amber);
}

.kanban-section:nth-of-type(3) .card-small {
  --colour-card-highlight: var(--colour-green);
}

.kanban-wrapper hr {
  border: 2px solid var(--colour-text);
}

.kanban-title {
  justify-content: space-between !important;
  position: relative;
}

.kanban-mobile-options {
  background: transparent;
  color: var(--colour-text);
  border: none;
}

.kanban-dropdown {
  display: none;
}

.kanban-dropdown[data-show] {
  display: block;
  position: absolute;
  width: fit-content;
  right: 0;
  top: 100%;

  background: var(--colour-block);
  z-index: 10;
}
.kanban-dropdown ul {
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding: 0;
  margin: 0;
}
.kanban-dropdown li {
  padding: 0.5rem;
}
.kanban-dropdown li:active {
  background-color: var(--colour-accent);
}

div:has(.click-expander:focus) > .expand-content {
  max-height: 3rem;
}

.expand-content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.1s ease-out;
}

/* .kanban-section + .kanban-section {
  border-left: 0.2rem solid var(--colour-text);
} */

/* TASKS */

.task-list-item {
  display: grid;
  grid-template-columns: 1fr 10ch;
}

@media (min-width: 768px) {
  .task-list-item {
    grid-template-columns: 1fr 20ch 10ch;
  }
}

.task-list-item p {
  margin: 0;
}

/* <hr> line break between todo items*/
.item-break {
  border: 1px solid var(--colour-text);
}

input[type="checkbox"]:checked + label {
  text-decoration: line-through;
}

/* MODAL <dialog>s */
.modal {
  border: none;
  background-color: var(--colour-highlight);
  color: var(--colour-text);
  box-shadow: var(--card-shadow);
  border-radius: var(--card-radius);
}

.modal::backdrop {
  background: rgba(0, 0, 0, 0.5);
}

.modal-form {
  display: flex;
  flex-direction: column;
  gap: 3rem;
  padding: 1rem;
}

.modal-form :not(label):not(div) {
  border: 2px solid var(--colour-accent);
  border-radius: 0.5rem;
  background-color: var(--colour-block);
  padding: 0.5rem;
}

.modal-form textarea {
  width: 50ch;
  min-height: 10rem;
  padding: 0.6rem 1rem;
  resize: vertical;
}

.input-label {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.end-button {
  display: flex;
  justify-content: flex-end;
}

/* BUTTONS */

.btn-action {
  background-color: var(--colour-accent);
  border: none;
  aspect-ratio: 1;
  width: 3rem;
  border-radius: 100vh;
  font-size: 2rem;
  margin: 0 1rem;
  box-shadow: var(--card-shadow);
  color: var(--colour-highlight);
  cursor: pointer;
  transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;

  display: flex;
  align-items: center;
  justify-content: center;
}

.btn-action :not(span) {
  display: none;
}

.btn-action[data-secondary] {
  background-color: var(--colour-block);
  color: var(--colour-text);
}

.btn-action:hover,
.btn-action:focus {
  outline-offset: 0.3rem;
  background-color: var(--colour-highlight);
  color: var(--colour-accent);
}

@media (min-width: 768px) {
  .btn-action {
    aspect-ratio: unset;
    font-size: 1.5em;
    border-radius: 0.5rem;
    width: unset;
    padding: 0.2rem 0.8rem;
  }
  .btn-action p {
    display: block;
    margin: 0 0.2rem;
    font-size: 0.7em;
    font-weight: 600;
  }
}

/* UTILITY */

.bg-accent {
  background-color: var(--colour-accent-trans);
}

.text-center {
  text-align: center;
}

.btn-accent {
  background-color: var(--colour-accent) !important;
}

.btn-icon {
  background: transparent;
  color: var(--colour-text);
  opacity: 0.5;
  border: none;
}

.btn-icon:hover {
  cursor: pointer;
}

.dimmed {
  opacity: 0.5;
}

.flex-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
}

.flex-col {
  display: flex;
  flex-direction: column;
}

/* USE SPARINGLY */
.mobile-hidden {
  display: none;
}

@media (min-width: 768px) {
  .mobile-hidden {
    display: initial;
  }
}

#waves {
  position: absolute;
  width: 100%;
  height: 100%;
  overflow: hidden;
  left: 0px;
  top: 0px;
  background: var(--colour-block);
  border: 1px solid var(--colour-block);
  backdrop-filter: blur(2px);
  z-index: -1;
}

